src/test/ui/malformed/malformed-special-attrs.stderr
error: expected `(`, found `<eof>`

error: expected `(`, found `=`
  --> $DIR/malformed-special-attrs.rs:4:12
   |
LL | #[cfg_attr]
   | - expected `(`
...
LL | #[cfg_attr = ""]
   |            ^ unexpected token

error: attribute must be of the form `#[derive(Trait1, Trait2, ...)]`
  --> $DIR/malformed-special-attrs.rs:7:1
   |
LL | #[derive]
   | ^^^^^^^^^

error: attribute must be of the form `#[derive(Trait1, Trait2, ...)]`
  --> $DIR/malformed-special-attrs.rs:10:1
   |
LL | #[derive = ""]
   | ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

